# BostarDecks

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Pipfile  README.md  build.sh  conanfile.txt  requirements.txt
db/: create_db.sql  deck.sql  deckFlashcard.sql  flashcard.sql  info.sql  level.sql
src/: CMakeLists.txt  Database.cpp  logger.h  main.cpp
src/db/: database.cpp  database.h  database_builder.cpp  database_builder.h  model.cpp  model.h  models.cpp  models.h  read_file.py
src/db/models/: deck.cpp  deck.h
src/inc/: Database.h  logger.h
test/: CMakeLists.txt  database_test.cpp
